# quickshapes

./: .gitignore  CMakeLists.txt  README.md  ShapefileView.cpp  ShapefileView.hpp  ShapesModel.hpp  WktShapesModel.cpp  WktShapesModel.hpp  main.cpp  mainwindow.qml  qshapeview.sublime-project
ShapesView/: CMakeLists.txt  ShapefileView.cpp  ShapefileView.hpp  ShapesModel.hpp  ShapesViewPlugin.cpp  ShapesViewPlugin.hpp  WktShapesModel.cpp  WktShapesModel.hpp  qmldir
include/qshapeview/: ShapefileView.hpp  ShapesViewPlugin.hpp
src/: ShapefileView.cpp  ShapesViewPlugin.cpp  WktShapesModel.hpp
test/: main.cpp  mainwindow.qml
